--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install .
-          pip install '.[test]'
+          pip install '.[dev]'
       - name: Run pytest
         run: pytest --cov=locpy --cov-report=xml
       - name: Upload test coverage to Codecov
