--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -24,8 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install .
-          pip install '.[dev]'
+          pip install . --group test
       - name: Run pytest
         run: pytest --cov=locpy --cov-report=xml
       - name: Upload test coverage to Codecov
