--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           sphinx-build docs/source docs/build
       - name: Deploy to GitHub pages
-        uses: peaceiris/actions-gh-pages@3
+        uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
         with:
           publish_branch: gh-pages
