--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -16,12 +16,12 @@ jobs:
           pip install sphinx furo
       - name: Sphinx build
         run: |
-          sphinx-build docs/source docs/build
+          sphinx-build docs _build
       - name: Deploy to GitHub pages
         uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
         with:
           publish_branch: gh-pages
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: docs/build/html
+          publish_dir: _build
           force_orphan: true
